<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
		android:layout_height="match_parent">

	<EditText
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text=""
			android:hint="@string/city_name"
			android:ems="10"
			android:id="@+id/etCityName"
			android:layout_marginEnd="8dp"
			app:layout_constraintEnd_toEndOf="parent"
			android:layout_marginRight="8dp"
			android:layout_marginStart="8dp"
			app:layout_constraintStart_toStartOf="parent"
			android:layout_marginLeft="8dp"
			android:layout_marginTop="8dp"
			app:layout_constraintTop_toBottomOf="@+id/tvCityName"/>
	<TextView
			android:text="@string/city_name"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/tvCityName"
			android:textSize="20dp"
			app:layout_constraintStart_toStartOf="parent"
			android:layout_marginLeft="8dp"
			android:layout_marginStart="8dp"
			android:layout_marginTop="8dp"
			app:layout_constraintTop_toTopOf="parent"/>
	<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal"
			app:layout_constraintTop_toBottomOf="@+id/etCityName"
			app:layout_constraintEnd_toEndOf="parent"
			android:layout_marginEnd="8dp"
			android:layout_marginRight="8dp"
			app:layout_constraintStart_toStartOf="parent"
			android:layout_marginLeft="8dp"
			android:layout_marginStart="8dp"
			android:weightSum="2">
		<Button
				android:text="@string/cancel"
				android:layout_width="0dp"
				android:layout_weight="1"
				android:layout_height="wrap_content"
				android:id="@+id/btnCancel"
				android:layout_marginTop="8dp"
				app:layout_constraintTop_toBottomOf="@+id/etCityName"
				app:layout_constraintStart_toStartOf="parent"
				android:layout_marginLeft="8dp"
				android:layout_marginStart="8dp"/>
		<Button
				android:text="@string/ok"
				android:layout_width="0dp"
				android:layout_weight="1"
				android:layout_height="wrap_content"
				android:id="@+id/btnOK"
				android:layout_marginTop="8dp"
				app:layout_constraintTop_toBottomOf="@+id/etCityName"
				app:layout_constraintEnd_toEndOf="parent"
				android:layout_marginEnd="8dp"
				android:layout_marginRight="8dp"/>
	</LinearLayout>

</android.support.constraint.ConstraintLayout>